# active-redis

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg
active_redis/: __init__.py  active_redis.py  core.py  datatype.py  exception.py  observer.py  registry.py
active_redis.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
active_redis/datatypes/: dict.py  list.py  set.py
active_redis/observables/: __init__.py
examples/: basic.py  datatype.py  dict.py  list.py  observable.py  script.py  set.py
tests/: __init__.py  active_redis.py  core.py  datatype.py  registry.py
tests/datatypes/: dict.py  list.py  set.py
