[metadata]
name = active_redis
summary = Active Redis is a Python library for interacting with Redis data structures using common Python classes.
description-file = README.md
author =  Jordan Halterman
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = active_redis

[global]
setup-hooks = pbr.hooks.setup_hook
